Add layout and index files

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,5 @@
-<h1>Home Page</h1>
+<div.container>
+    <div class = "col-sm-3">One<div>
+    <div class = "col-sm-3">One<div>
+    <div class = "col-sm-3">One<div>
+</div>
