--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,9 @@
-<div.container>
-    <div class = "col-sm-3">One<div>
-    <div class = "col-sm-3">One<div>
-    <div class = "col-sm-3">One<div>
-</div>
+<body>
+  <div class = "container">
+    <ul class = "row">
+      <li class = "col-sm-3">One</li>
+      <li class = "col-sm-3">One</li>
+      <li class = "col-sm-3">One</li>
+    </ul>
+  </div>
+</body>
