--- a/app/views/generate.erb
+++ b/app/views/generate.erb
@@ -1,9 +1,28 @@
-<% @photos.each do |photo| %>
-  
-  <img src="<%= photo %>" alt="random photo" /> 
-  
-  <form action='/generate/new' method='post'>
-  <input name="image" value='<%= photo %>' type='hidden'/>
-  <button>SELECT</button></form>
 
-<% end %>
+
+<body>
+
+<div class = "container">
+  <div class = "row">
+    <div class = "col-sm-4"> <% @photos.each do |photo| %>
+        <img src="<%= photo %>" alt="random photo" />
+        <form action='/generate/new' method='post'>
+        <button class = "btn-default">Caption It!</button></form>
+    <% end %>
+  </div>
+
+    <div class = "col-sm-4"><% @photos.each do |photo| %>
+        <img src="<%= photo %>" alt="random photo" />
+      </a>
+    <% end %>
+  </div>
+
+    <div class = "col-sm-4"><% @photos.each do |photo| %>
+        <img src="<%= photo %>" alt="random photo" />
+      </a>
+    <% end %>
+  </div>
+</div>
+</div>
+
+</body
