--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,38 +3,53 @@
   <div class = "container">
     <div class = "row">
       <div class = "col-sm-4"> <% @photos.each do |photo| %>
-        <img src="<%= photo %>" alt="random photo" />
+        <a href = <"image/<% image.id %>/show">
+          <img src="<%= photo %>" alt="random photo" />
+        </a>
       <% end %>
-        <a class="btn btn-default"  >Caption It!</a>
     </div>
+      <div class="panel panel-default, col-sm-4">
+        <div class="panel-body">
+          op Caption Here
+        </div>
+      </div>
+
       <div class = "col-sm-4"><% @photos.each do |photo| %>
-        <img src="<%= photo %>" alt="random photo" />
+        <a href = <"image/<% image.id %>/show">
+          <img src="<%= photo %>" alt="random photo" />
+        </a>
       <% end %></div>
       <div class = "col-sm-4"><% @photos.each do |photo| %>
-        <img src="<%= photo %>" alt="random photo" />
+        <a href = <"image/<% image.id %>/show">
+          <img src="<%= photo %>" alt="random photo" />
+        </a>
       <% end %></div>
     </div>
   </div>
 
-
+<hr>
   <section>
     <div class = "container">
       <div class = "row">
         <div class = "col-sm-4"> <% @photos.each do |photo| %>
-          <img src="<%= photo %>" alt="random photo" />
+          <a href = <"image/<% image.id %>/show">
+            <img src="<%= photo %>" alt="random photo" />
+          </a>
         <% end %>
-          <a class="btn btn-default"  >Caption It!</a>
       </div>
         <div class = "col-sm-4"><% @photos.each do |photo| %>
-          <img src="<%= photo %>" alt="random photo" />
+          <a href = <"image/<% image.id %>/show">
+            <img src="<%= photo %>" alt="random photo" />
+          </a>
         <% end %></div>
         <div class = "col-sm-4"><% @photos.each do |photo| %>
-          <img src="<%= photo %>" alt="random photo" />
+          <a href = <"image/<% image.id %>/show">
+            <img src="<%= photo %>" alt="random photo" />
+          </a>
         <% end %></div>
       </div>
     </div>
 
   </section>
-=======
->>>>>>> refs/remotes/origin/master
+
 </body>
