--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -10,7 +10,7 @@
     </div>
       <div class="panel panel-default, col-sm-4">
         <div class="panel-body">
-          op Caption Here
+          Put Caption Here
         </div>
       </div>
 
@@ -28,6 +28,7 @@
   </div>
 
 <hr>
+
   <section>
     <div class = "container">
       <div class = "row">
