--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -11,6 +11,17 @@ img{
   height: 510px
 }
 
+IMG.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto }
+
+    
+.img-clr{
+  width: 850px;
+
+}
+
 .btn1 {
   padding: 14px 24px;
    border: 0 none;
@@ -50,5 +61,5 @@ img{
 
 .btn-form{
   Margin: 0 auto;
-  Width: 100px;
+  Width: 200px;
 }
