--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,4 +1,4 @@
-<a href="/"><img src="<%= @image.url %>" alt="random photo" /></a>
+<img src="<%= @image.url %>" alt="random photo" />
 
 
 <form action="caption/new" method="post">
