--- a/app/views/generate.erb
+++ b/app/views/generate.erb
@@ -5,9 +5,11 @@
 <div class = "container">
     <div> <% @photos.each do |photo| %>
         <img class= "displayed img-clr" src="<%= photo %>" alt="random photo" />
+
         <form class = "btn-form" action='/generate/new' method='post'>
-        <button type="button" class = "btn1 btn1-primary btn1-lg outline">Caption It!</button></form>
-    <% end %>
+          <input name="image" value='<%= photo %>' type='hidden'/>
+        <button type="submit" class = "btn1 btn1-primary btn1-lg outline">Caption It!</button></form>
+          <% end %>
   </div>
 </div>
 
