--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -7,8 +7,7 @@ ul li img {
 }
 
 img{
-  width: 375px;
-  height: 510px
+  max-width: 100%
 }
 
 IMG.displayed {
@@ -16,7 +15,7 @@ IMG.displayed {
     margin-left: auto;
     margin-right: auto }
 
-    
+
 .img-clr{
   width: 850px;
 
