Add styles to show page

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,9 +1,12 @@
-<img src="<%= @image.url %>" alt="random photo" />
 
+<div class = "container">
+  <img class= "displayed img-clr" src="<%= @image.url %>" alt="random photo" />
+    <div class="form-group text_fit">
+      <textarea placeholder="Enter your caption" class="form-control" name="text"></textarea>
+    </div>
 
-<form action="caption/new" method="post">
-<input name="image_id" value='<%= @image.id %>' type='hidden'/>
-
-
-<textarea name="text"></textarea>
-<button>SUBMIT</button></form>
+    <form class="btn-form" action="caption/new" method="post">
+        <input name="image_id" value='<%= @image.id %>' type='hidden'/>
+        <button class = "btn1 btn1-primary btn1-lg outline">CAPTION</button>
+    </form>
+<div>
