Update styles on homepage

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,60 +1,27 @@
-
+<div class="hero-unit1">
+  <div class = "container text-center">
+    <h1>TRY THIS $*#@ OUT!</h1>
+    <p class= "btn-form"><a href= '/generate' class="btn1 btn1-primary outline ">LET'S GO</a></p>
+  </div>
+ </div>
 <body>
   <div class = "container">
     <div class = "row">
       <div class = "col-sm-4">
- 
           <img src="<%= @photos[0].url %>" alt="random photo" />
-          <p></p>
-        
-
+          <div>Top Comment</div>
     </div>
-      <div class="panel panel-default, col-sm-4">
-
-        <div class="panel-body">
-          Put Caption Here
-        </div>
-
-      </div>
 
       <div class = "col-sm-4">
-       
           <img src="<%= @photos[1].url %>" alt="random photo" />
-          <p></p>
-
-          
+          <div>Top Comment</div>
       </div>
       <div class = "col-sm-4">
-        
           <img src="<%= @photos[2].url %>" alt="random photo" />
-       
+          <div>Top Comment</div>
       </div>
     </div>
   </div>
 
-<hr>
-
-  <section>
-    <div class = "container">
-      <div class = "row">
-        <div class = "col-sm-4"> 
-            <img src="" alt="random photo" />
-         
-      
-      </div>
-        <div class = "col-sm-4">
-          
-            <img src="" alt="random photo" />
-          
-   </div>
-        <div class = "col-sm-4">
-          
-            <img src="" alt="random photo" />
-          
-        </div>
-      </div>
-    </div>
-
-  </section>
 
 </body>
