--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar1">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
