--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -7,10 +7,43 @@ ul li img {
 }
 
 img{
-  max-width: 100%;
-  max-height: 500px;
+  width: 100%;
+  height: 500px;
+}
+.navbar1 {
+    margin-bottom:0;
+  }
+
+  .vertical-center {
+    min-height: 100%;
+    min-height: 100vh;
+}     
+
+.hero-unit1 {
+padding: 60px;/* CHANGE PADDING HERE*/
+margin-bottom: 30px;
+font-size: 18px;
+font-weight: 200;
+line-height: 30px;
+color: inherit;
+background-color: #eeeeee; /* CHANGE BACKGROUND HERE*/
+-webkit-border-radius: 6px;
+-moz-border-radius: 6px;
+border-radius: 6px;
 }
 
+.clip-me {
+
+  /* deprecated version */
+  position: absolute; /* absolute or fixed positioning required */
+  clip: rect(auto); /* or "auto" */
+  /* values descript a top/left point and bottom/right point */
+
+  /* current version (doesn't require positioning) */
+  clip-path: inset(100px 200px 300px 400px); /* or "none" */
+  /* values are from-top, from-right, from-bottom, from-left */
+
+}
 
 IMG.displayed {
     display: block;
@@ -59,6 +92,10 @@ IMG.displayed {
 	border-color: #007299;
 	color: #007299;
 	box-shadow: none;
+}
+
+.btn1-big{
+  width: 500px;
 }
 
 .btn-form{
