--- a/app/views/history.erb
+++ b/app/views/history.erb
@@ -1,5 +1,10 @@
+<div class = "container">
 
-<% @captions_url.each do |url, caption| %>
-<img src="<%=url %>"/>
-<p><%=caption %></p>
+  <div><% @captions_url.each do |url, caption| %>
+<img class= "displayed img-clr" src="<%=url %>"/>
+<div class = "form-actions caption"><%=caption %></div>
 <%end %>
+
+
+  </div>
+</div>
