--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -10,7 +10,7 @@
     <textarea placeholder="Enter your caption" class="form-control" name="text"></textarea>
     <div class ="btn-form">
         <input name="image_id" value='<%= @image.id %>' type='hidden'/>
-        <button class = "btn1 btn1-primary btn1-lg outline ">CAPTION</button>
+        <button class = "btn1 btn1-primary btn1-lg outline capjur-home-btn">CAPTION</button>
       </div>  
     </form>
 </div>
