--- a/app/views/history.erb
+++ b/app/views/history.erb
@@ -1,10 +1,11 @@
 <div class = "container">
-
-  <div><% @captions_url.each do |url, caption| %>
-<img class= "displayed img-clr" src="<%=url %>"/>
-<div class = "form-actions caption"><%=caption %></div>
-<%end %>
-
-
-  </div>
+  <div class ="image-container">
+    <% @captions_url_votes.each do |caption| %>
+      <img id = "user_images" src="<%=caption.image.url %>"/>
+        <div class = "caption-box caption">
+        <span = class="badge badge-count vote-badge">Votes: <%=caption.total_votes%></span>
+        <%=caption.text %>
+        </div>
+        <%end %>
+    </div>
 </div>
