--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -10,11 +10,12 @@ img{
   width: 100%;
   height: 500px;
 }
+
 .navbar1 {
     margin-bottom:0;
   }
 
-  .vertical-center {
+.vertical-center {
     min-height: 100%;
     min-height: 100vh;
 }
@@ -86,8 +87,6 @@ IMG.displayed {
 	box-shadow: none;
 }
 
-
-
 .btn-form{
   Margin: 0 auto;
   Width: 200px;
@@ -97,6 +96,7 @@ IMG.displayed {
     margin: 0;
     background-color: transparent;
     text-align: center;
+    height: 70px;
 }
 
 .badge-count {
@@ -113,5 +113,38 @@ IMG.displayed {
 
 .caption{
   font-family: 'Cuprum', sans-serif;
-  font-size: 25px;
+  font-size: 20px;
+}
+
+.caption-box{
+  margin: 10px;
+  background-color: transparent;
+  text-align: center;
+  height: 50px;
+  border: 2px solid #000000;
+}
+
+#user_images{
+  max-width: 100%;
+  height: 400px;
+  padding: 10px;
+}
+
+
+.image-container{
+  display: inline-block;
+  width: 500px;
+  height: 500px;
+  margin-top: 25px;
+  margin-bottom: 10px;
+}
+
+.center-me{
+  width: 100%;
+  margin: 0px auto;
+}
+
+.vote-badge{
+  padding: 5px 20px;
+  font-size: 15px;
 }
