--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -10,7 +10,6 @@ img{
   width: 100%;
   height: 500px;
 }
-<<<<<<< HEAD
 
 .navbar1 {
     margin-bottom:0;
@@ -19,15 +18,9 @@ img{
 .vertical-center {
     min-height: 100%;
     min-height: 100vh;
-=======
-
-.vertical-center {
-  min-height: 100%;
-  min-height: 100vh;
->>>>>>> 29c54aca8246ee8dd305179f2a8675b49f3de31f
 }
 
-.hero-unit1 {
+.hero-unit1{
 padding: 40px;/* CHANGE PADDING HERE*/
 margin-bottom: 30px;
 font-size: 18px;
@@ -45,8 +38,9 @@ IMG.displayed {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10px;
-    margin-top: 10px;
+    margin-top: 25px;
 }
+
 .h1-hero{
   padding: 15px;
   font-size: 45px;
@@ -74,6 +68,7 @@ IMG.displayed {
     background: #0099cc;
     color: #ffffff;
 }
+
 .btn1.outline {
     background: none;
     padding: 12px 22px;
@@ -85,11 +80,13 @@ IMG.displayed {
     color: #0099cc;
     border-radius: 5px;
 }
+
 .btn1-primary.outline:hover, .btn1-primary.outline:focus, .btn-primary.outline:active, .btn-primary.outline.active, .open > .dropdown-toggle.btn-primary {
 	color: #33a6cc;
 	border-color: #33a6cc;
   border-radius: 5px;
 }
+
 .btn1-primary.outline:active, .btn1-primary.outline.active {
 	border-color: #007299;
 	color: #007299;
@@ -126,8 +123,25 @@ IMG.displayed {
   margin-left: 8px;
   /*#a30c49;*/
 }
+
 .badge-count:hover {
   background-color: #da9db6;
+}
+
+.top-comment-text {
+  font-family: 'Cuprum', sans-serif;
+  font-size: 15px;
+}
+
+.top-comment-block {
+  margin-top: 10px;
+  margin-bottom: 30px;
+  background-color: #f5f5f5;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #09b8c1;
+  border-radius: 5px;
+  padding: 5px;
 }
 
 .cptn_cont{
@@ -163,30 +177,8 @@ IMG.displayed {
   margin-bottom: 10px;
 }
 
-.center-me{
-  width: 100%;
-  margin: 0px auto;
-}
-
 .vote-badge{
   padding: 5px 20px;
   font-size: 15px;
+  background-color: #a30c49;
 }
-
-.top-comment-text {
-  font-family: 'Cuprum', sans-serif;
-  font-size: 15px;
-}
-
-.top-comment-block {
-  margin-top: 10px;
-  margin-bottom: 30px;
-  background-color: #f5f5f5;
-  border-style: solid;
-  border-width: 2px;
-  border-color: #09b8c1;
-  border-radius: 5px;
-  padding: 5px;
-}
-
-/**/
