--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -136,10 +136,9 @@ IMG.displayed {
 .top-comment-block {
   margin-top: 10px;
   margin-bottom: 30px;
-  background-color: #f5f5f5;
   border-style: solid;
   border-width: 2px;
-  border-color: #09b8c1;
+  border-color: #000000;
   border-radius: 5px;
   padding: 5px;
 }
@@ -158,7 +157,7 @@ IMG.displayed {
   margin: 10px;
   background-color: transparent;
   text-align: center;
-  height: 50px;
+  height: 70px;
   border: 2px solid #000000;
 }
 
@@ -170,7 +169,8 @@ IMG.displayed {
 
 
 .image-container{
-  display: inline-block;
+  /*display: inline-block;*/
+  float:left;
   width: 500px;
   height: 500px;
   margin-top: 25px;
