--- a/app/views/history.erb
+++ b/app/views/history.erb
@@ -3,9 +3,9 @@
   <div>
     <% chunk.each do |caption| %>
     <div class="image-container">
-      <img id="user_images" src="<%=caption.image.url %>"/>
+      <img id="d1" class="user_images" src="<%=caption.image.url %>"/>
       <div class="caption-box caption">
-        <span class="badge badge-count vote-badge">Votes: <%=caption.total_votes%></span><span>"<%=caption.text %>"</span>
+        <span class="badge badge-count vote-badge">Votes: <%=caption.total_votes%></span><span> "<%=caption.text %>"</span>
       </div>
     </div>
     <% end %>
