--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,33 +8,30 @@
   <div class = "container">
     <div class = "row top-comment-text">
       <div class = "col-sm-4">
-          <a href='/images/<%= @photos[0].id %>/show'><img src="<%= @photos[0].url %>" alt="random photo" />
-          <input name="image" value='<%= @photos[0].captions %>' type='hidden'/</a>
-          <div class="top-comment-block">
-            <div><%= @photos[0].captions.order(:total_votes).reverse.first.text %>
-              <span class="badge badge-count"><%=@photos[0].total_caption_votes %></span> 
-            </div>
+        <a href='/images/<%= @photos[0].id %>/show'><img src="<%= @photos[0].url %>" alt="random photo" /></a>
+          <input name="image" value='<%= @photos[0].captions %>' type='hidden'/>
+        <div class="top-comment-block">
+          <span class="badge badge-count vote-badge"><%=@photos[0].total_caption_votes %></span>
+            <%= @photos[0].captions.order(:total_votes).reverse.first.text %>
           </div>
       </div>
+
       <div class = "col-sm-4">
-          <a href='/images/<%= @photos[1].id %>/show'><img src="<%= @photos[1].url %>" alt="random photo" />
-          <input name="image" value='<%= @photos[1].captions %>' type='hidden'/</a>
+          <a href='/images/<%= @photos[1].id %>/show'><img src="<%= @photos[1].url %>" alt="random photo" /></a>
+          <input name="image" value='<%= @photos[1].captions %>' type='hidden'/>
           <div class="top-comment-block">
-            <div><%= @photos[1].captions.order(:total_votes).reverse.first.text %>
-              <span class="badge badge-count"><%=@photos[1].total_caption_votes %></span> 
-            </div>
+            <span class="badge badge-count vote-badge"><%=@photos[1].total_caption_votes %></span>
+            <%= @photos[1].captions.order(:total_votes).reverse.first.text %>
           </div>
       </div>
+
       <div class = "col-sm-4">
-          <a href='/images/<%= @photos[2].id %>/show'><img src="<%= @photos[2].url %>" alt="random photo" />
-          <input name="image" value='<%= @photos[2].captions %>' type='hidden'/</a>
+          <a href='/images/<%= @photos[2].id %>/show'><img src="<%= @photos[2].url %>" alt="random photo" /></a>
+          <input name="image" value='<%= @photos[2].captions %>' type='hidden'/>
           <div class="top-comment-block">
-            <div><%= @photos[2].captions.order(:total_votes).reverse.first.text %>
-              <span class="badge badge-count"><%=@photos[2].total_caption_votes %></span> 
-            </div>
+            <span class="badge badge-count vote-badge"><%=@photos[2].total_caption_votes %></span>
+            <%= @photos[2].captions.order(:total_votes).reverse.first.text %>
           </div>
       </div>
     </div>
   </div>
-
-
