--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -124,23 +124,30 @@ IMG.displayed {
   /*#a30c49;*/
 }
 
+.vote-badge{
+  padding: 5px 20px;
+  font-size: 15px;
+  background-color: #F78D1E;
+}
+
 .badge-count:hover {
-  background-color: #da9db6;
+  background-color: #FABA78;
 }
 
 .top-comment-text {
   font-family: 'Cuprum', sans-serif;
-  font-size: 15px;
+  font-size: 20px;
 }
 
 .top-comment-block {
-  margin-top: 10px;
+  margin-top: 5px;
   margin-bottom: 30px;
-  border-style: solid;
+  /*border-style: solid;
   border-width: 2px;
-  border-color: #000000;
+  border-color: #000000;*/
   border-radius: 5px;
   padding: 5px;
+  height: 70px;
 }
 
 .cptn_cont{
@@ -156,12 +163,10 @@ IMG.displayed {
 .caption-box{
   margin: 10px;
   background-color: transparent;
-  text-align: center;
-  height: 70px;
-  border: 2px solid #000000;
+  height: 70px;;
 }
 
-#user_images{
+.user_images{
   max-width: 100%;
   height: 400px;
   padding: 10px;
@@ -175,10 +180,4 @@ IMG.displayed {
   height: 500px;
   margin-top: 25px;
   margin-bottom: 10px;
-}
-
-.vote-badge{
-  padding: 5px 20px;
-  font-size: 15px;
-  background-color: #a30c49;
 }
