More style tweaks to captions on various pages

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -10,6 +10,8 @@
   <link href="/stylesheets/application.css" rel="stylesheet">
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src ="/javascript/baguetteBox.min.js"></script>
+  <link href="/stylesheets/baguetteBox.min.css" rel="stylesheet">
 
   <title>Caption it!</title>
 </head>
@@ -30,8 +32,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href='/history'>History</a></li>
         <li><a href='/generate'>Create</a></li>
+        <li><a href='/history'>My History</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
