--- a/app/views/history.erb
+++ b/app/views/history.erb
@@ -3,7 +3,7 @@
   <div>
     <% chunk.each do |caption| %>
     <div class="image-container">
-      <img id="d1" class="user_images" src="<%=caption.image.url %>"/>
+        <a href='images/<%= caption.image_id%>/show'><img class="user_images" src="<%=caption.image.url %>"/></a>
       <div class="caption-box caption">
         <span class="badge badge-count vote-badge">Votes: <%=caption.total_votes%></span><span> "<%=caption.text %>"</span>
       </div>
