--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -12,7 +12,7 @@
           <input name="image" value='<%= @photos[0].captions %>' type='hidden'/>
         <div class="top-comment-block">
           <span class="badge badge-count vote-badge"><%=@photos[0].total_caption_votes %></span>
-            <%= @photos[0].captions.order(:total_votes).reverse.first.text %>
+            "<%= @photos[0].captions.order(:total_votes).reverse.first.text %>"
           </div>
       </div>
 
@@ -21,7 +21,7 @@
           <input name="image" value='<%= @photos[1].captions %>' type='hidden'/>
           <div class="top-comment-block">
             <span class="badge badge-count vote-badge"><%=@photos[1].total_caption_votes %></span>
-            <%= @photos[1].captions.order(:total_votes).reverse.first.text %>
+            "<%= @photos[1].captions.order(:total_votes).reverse.first.text %>"
           </div>
       </div>
 
@@ -30,7 +30,7 @@
           <input name="image" value='<%= @photos[2].captions %>' type='hidden'/>
           <div class="top-comment-block">
             <span class="badge badge-count vote-badge"><%=@photos[2].total_caption_votes %></span>
-            <%= @photos[2].captions.order(:total_votes).reverse.first.text %>
+            "<%= @photos[2].captions.order(:total_votes).reverse.first.text %>"
           </div>
       </div>
     </div>
