Add more styling to generate and show pages

--- a/app/views/generate.erb
+++ b/app/views/generate.erb
@@ -5,7 +5,7 @@
         <form action='/generate/new' method='post'>
       <div class="form-actions">    <input name="image" value='<%= photo %>' type='hidden'/>
 
-        <button type="submit" class = "btn1 btn1-primary another">Caption It!</button>
+        <button type="submit" class = "btn1 btn1-primary another">Capjur It!</button>
         <button type="button" class = "btn1 btn1-primary btn1-lg outline"><a href ="/generate">Another!</button></a>
       </form>
     </div>
