--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,34 +1,29 @@
 <div class = "container">
   <img class= "displayed img-clr" src="<%= @image.url %>" alt="random photo" />
-
     <% if @user.captions.find_by(image_id: @image.id) %>
-    <% else %>
-    <div class="form-group text_fit">
-        <form action="/images/<%=@image.id%>/captions/new" method="post">
-        <textarea placeholder="Enter your caption" class="form-control" name="text"></textarea>
-        <div class ="btn-form">
+      <% else %>
+        <div class="form-group">
+          <form action="/images/<%=@image.id%>/captions/new" method="post">
+            <textarea placeholder="Enter your caption" class="form-cont" name="text"></textarea>
             <input name="image_id" value='<%= @image.id %>' type='hidden'/>
-            <button class = "btn1 btn1-primary btn1-lg outline capjur-home-btn">CAPTION</button>
-          </div>
-        </form>
-    </div>
+              <div class="btn-form">
+                <button class = "btn1 btn1-primary btn1-lg outline capjur-home-btn">Capjur It!</button>
+              </div>
+          </form>
+        </div>
     <% end %>
 
     <% @y.each do |caption| %>
-    <div class ="caption-box">
-      <div>
-        <span class="badge badge-count vote-badge"> <%= caption.total_votes %></span> "<%= caption.text %>" 
-      </div>
-      <p class ="user-text">  Created: <%= caption.created_at %> </p>
+    <div class ="caption-box caption">
+      <span class="badge badge-count vote-badge"> <%= caption.total_votes %></span> "<%= caption.text %>"
+        <p class ="user-text">  Created: <%= caption.created_at.strftime("%d %b. %Y") %> </p>
+          <% if @user.votes.find_by(caption_id: caption.id) || caption.user_id == @user.id %>
+            <% else %>
+              <form method="post" action='/captions/vote/<%= caption.id %>'>
+                <input name="image_id" value='<%= @image.id %>' type='hidden'/>
+                <button type="submit" class = "btn1 btn1-primary another btn-form1">Vote!</button>
+              </form>
+          <% end %>
     </div>
-
-      <% if @user.votes.find_by(caption_id: caption.id) || caption.user_id == @user.id %>
-      <% else %>
-        <form method="post" action='/captions/vote/<%= caption.id %>'>
-        <input name="image_id" value='<%= @image.id %>' type='hidden'/>
-        <button type="submit" class = "btn1 btn1-primary another">Vote!</button>
-        </form>
-      <% end %>
     <% end %>
-
 </div>
