--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,6 +7,8 @@
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
+  <link rel="/stylesheets/fontello-codes.css" rel="stylesheet">
+
   <link href="/stylesheets/application.css" rel="stylesheet">
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
