--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -38,6 +38,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href='/generate'>Create</a></li>
+        <li><a href='/all'>All</a></li>
         <li><a href='/history'>My History</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
