Add logo and mic button

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -5,15 +5,13 @@
         <div class="form-group">
           <form action="/images/<%=@image.id%>/captions/new" method="post">
             <textarea placeholder="Enter your caption" class="form-cont" name="text"></textarea>
-            <input name="image_id" value='<%= @image.id %>' type='hidden'/>
-              <div class="btn-form">
-                <button class = "btn1 btn1-primary btn1-lg outline capjur-home-btn">Capjur It!</button>
+              <div class="form-actions">
+              <input name="image_id" value='<%= @image.id %>' type='hidden'/>
+              <button class = "btn1 btn1-primary btn1-lg another1">Capjur It!</button></form>
+            </div>
+              <div class="form-actions">
+              <button id="mic" class = "btn1 btn1-primary outline">Use mic!</button>
               </div>
-          </form>
-
-<button id="mic" class = "btn1 btn1-primary btn1-lg outline capjur-home-btn">MIC</button>
-
-
         </div>
     <% end %>
 
