--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link href="/fontello.css">
+  <link href="/fontello-codes.css">
+  <link href="/fontello-embedded.css">
 
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-
-  <link rel="/stylesheets/fontello-codes.css" rel="stylesheet">
 
   <link href="/stylesheets/application.css" rel="stylesheet">
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src ="/javascript/baguetteBox.min.js"></script>
   <link href="/stylesheets/baguetteBox.min.css" rel="stylesheet">
-<script src="/javascript/platform.js"></script>
-<script src="/javascript/webspeech.js"></script>
+
+  <script src="/javascript/platform.js"></script>
+  <script src="/javascript/webspeech.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <title>Caption it!</title>
@@ -32,7 +35,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">CAPJUR</a>
+        <a class="navbar-brand nav1" href="/"><span> <img class="img-logo" src="/captaincj.png"</img>CAPJUR</a></span>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
