--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?35022094');
-  src: url('../font/fontello.eot?35022094#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?35022094') format('woff'),
-       url('../font/fontello.ttf?35022094') format('truetype'),
-       url('../font/fontello.svg?35022094#fontello') format('svg');
+  src: url('/fontello.eot?35022094');
+  src: url('/fontello.eot?35022094#iefix') format('embedded-opentype'),
+       url('/fontello.woff?35022094') format('woff'),
+       url('/fontello.ttf?35022094') format('truetype'),
+       url('/fontello.svg?35022094#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -18,40 +18,40 @@
   }
 }
 */
- 
+
  [class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "fontello";
   font-style: normal;
   font-weight: normal;
   speak: none;
- 
+
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
   margin-right: .2em;
   text-align: center;
   /* opacity: .8; */
- 
+
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
- 
+
   /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
- 
+
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
   margin-left: .2em;
- 
+
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
- 
+
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
- 
+
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
- 
+
 .icon-mic:before { content: '\e800'; } /* '' */
